--- a/.gitignore
+++ b/.gitignore
@@ -9,12 +9,23 @@
 !.gitmodules
 !*.md
 !.travis.yml
-!custom_components
-!custom_components/**
-!www
-!www/**
-!automations
-!automations/**
+!automations/
+!binary_sensors/
+!cameras/
+!climates/
+!custom_components/
+!deps/
+!device_trackers/
+!image_processings/
+!includes/
+!input_booleans/
+!input_selects/
+!media_players/
+!notifies/
+!panel_iframes/
+!remotes/
+!sensors/
+!www/
 
 # Ignore folders.
 .storage
