--- a/configuration.yaml
+++ b/configuration.yaml
@@ -1,404 +1,42 @@
 # Configure a default setup of Home Assistant (frontend, api, etc)
-default_config:
-
-netatmo:
-  api_key: !secret netatmo-api-key
-  secret_key: !secret netatmo-secret
-  username: !secret email
-  password: !secret netatmo-password
-  discovery: true
-  webhooks: true
-
-binary_sensor:
-- platform: template
-  sensors:
-    netatmo_webhook_trigger:
-      device_class: motion
-      friendly_name: Netatmo webhook trigger
-      value_template: "{{ is_state('sensor.netatmo_webhook_trigger', 'NOC-human') }}"
-
-camera:
-- platform: local_file
-  name:  Snap Terrasse
-  file_path: /config/www/camera/CamTerrasse_vehicle_latest.jpg
-- platform: local_file
-  name: Snap Salon
-  file_path: /config/www/camera/CamSalon_latest.jpg
-
-cloud:
-
-climate:
-- platform: generic_thermostat
-  name: Température Salon
-  heater: input_boolean.fake_heater
-  target_sensor: sensor.netatmo_salon_temperature
-  initial_hvac_mode: "off"
-  target_temp: 21
-- platform: generic_thermostat
-  name: Température Terrasse
-  heater: input_boolean.fake_heater
-  target_sensor: sensor.netatmo_terrasse_temperature
-  initial_hvac_mode: "off"
-  target_temp: 21
-- platform: generic_thermostat
-  name: Température Bureau
-  heater: input_boolean.fake_heater
-  target_sensor: sensor.sensative_strips_comfort_temperature_2
-  initial_hvac_mode: "off"
-  target_temp: 21
-- platform: generic_thermostat
-  name: Température Chambre Parentale
-  heater: input_boolean.fake_heater
-  target_sensor: sensor.tdeg_parents
-  initial_hvac_mode: "off"
-  target_temp: 21
-- platform: generic_thermostat
-  name: Température Chambre Lenaïc
-  heater: input_boolean.fake_heater
-  target_sensor: sensor.sensative_strips_comfort_temperature
-  initial_hvac_mode: "off"
-  target_temp: 21
-
-folder_watcher:
-- folder: /config
-  patterns:
-    - '*.yaml'
-          
-googlehome:
-  devices:
-  - host: 192.168.0.33
-#    - host: 192.168.0.131
-    
-device_tracker:
-- platform: nmap_tracker
-  interval_seconds: 10
-  consider_home: 60
-  hosts:
-    - 192.168.0.35
-    - 192.168.0.39
-    - 192.168.0.25
-- platform: tile
-  username: !secret email
-  password: !secret tile
-- platform: googlehome
-  host: 192.168.0.33
-  rssi_threshold: -100
-  interval_seconds: 5
-  consider_home: 10
-  new_device_defaults:
-    track_new_devices: false
-- platform: composite
-  name: Vincent
-  time_as: local
-  entity_id:
-    - device_tracker.ariela_vincent
-    - device_tracker.life360_vincent
-    - device_tracker.tile_84ff3b083add401d
-- platform: composite
-  name: Virginia
-  time_as: local
-  entity_id:
-    - device_tracker.ariela_virginia
-    - device_tracker.life360_virginia
-    - device_tracker.tile_dd661ca6aff34ef1
-
-downloader:
-  download_dir: www
-
-#  - platform: googlehome
-#    host: 192.168.0.131
-#    rssi_threshold: -100
-#    interval_seconds: 5
-#    consider_home: 10
-#    new_device_defaults:
-#      track_new_devices: false
-
-google:
-  client_id: !secret google-client-id
-  client_secret: !secret google-client-secret
-
-google_assistant:
-  project_id: home-assistant-246207
-  api_key: !secret google-assistant-api-key
-  exposed_domains:
-  - cover
-  - climate
-  - switch
-  entity_config:
-    cover.velux_palier:
-      expose: false
-    cover.velux_lenaic:
-      expose: false
-    cover.volet_palier:
-      expose: false
-    cover.volet_lenaic:
-      expose: false
-    switch.toggle_both_lenaic:
-      expose: false
-    switch.toggle_velux_lenaic:
-      expose: false
-    switch.toggle_volet_lenaic:
-      expose: false
-    switch.toggle_both_palier:
-      expose: false
-    switch.toggle_velux_palier:
-      expose: false
-    switch.toggle_volet_palier:
-      expose: false
-
-hacs:
-  token: !secret hacs-token
-  appdaemon: true
-  theme: true
-  
-homeassistant:
-  customize: !include customize.yaml
-  whitelist_external_dirs:
-  - /config
-  - /config/www/
-  - /config/www/camera
-  - /config/www/deepstack/Salon
-  - /config/www/deepstack/Terrasse
-  auth_providers:
-  - type: trusted_networks
-    trusted_networks:
-    - 192.168.0.0/24
-    - 172.30.32.1
-    allow_bypass_login: true
-  - type: homeassistant
-
-http:
-  server_port: 8124
-  base_url: https://tiarkaerell.duckdns.org
-  ssl_certificate: /ssl/fullchain.pem
-  ssl_key: /ssl/privkey.pem
-
-image_processing:
-- platform: deepstack_face
-  ip_address: 192.168.0.13
-  port: 5000
-  scan_interval: 86400
-  save_file_folder: www/deepstack/Salon
-  source:
-  - entity_id: camera.snap_salon
-    name: face_counter_salon
-- platform: deepstack_face
-  ip_address: 192.168.0.13
-  port: 5000
-  scan_interval: 86400
-  save_file_folder: www/deepstack/Terrasse
-  source:
-  - entity_id: camera.snap_terrasse
-    name: face_counter_terrasse
-
-input_boolean:
-  fake_heater:
-    name: Fake Heater
-    icon: mdi:toggle-switch-off
-    initial: off
-  vincent_home:
-    name: Vincent at home
-    initial: off
-    icon: mdi:human-male
-  virginia_home:
-    name: Virginia at home
-    initial: off
-    icon: mdi:human-female
-  guest_home:
-    name: guest at home
-    initial: off
-    icon:  mdi:briefcase-account
-
-input_select:
-  qubino:
-    name: Qubino Modes
-    options:
-     - Eteint
-     - "Hors Gel"
-     - Eco
-     - Confort
-    initial: Eteint
-
-life360:
-  accounts:
-  - username: !secret email
-    password: !secret tile 
-  show_as_state:
-  - driving
-  - moving
-      
-logger:
-  default: info
-  logs:
-    homeassistant.components.deepstack_face: debug
-
-lovelace:
-  mode: yaml
-
-map:
-
-media_player:
-- platform: androidtv
-  name: télévision
-  host: 192.168.0.29
-  adb_server_ip: 192.168.0.52
-  adb_server_port: 5037
-- platform: spotify
-  client_id: !secret spotify-client-id
-  client_secret: !secret spotify-client-secret
-
-mqtt:
-  broker: 192.168.0.52
-  username: ha
-  password: !secret mqtt-ha
-  discovery: true
-
-notify:
-- platform: html5
-  name: google_push
-  vapid_pub_key: !secret google-push-pubkey
-  vapid_prv_key: !secret google-push-prvkey
-  vapid_email: !secret email
-- platform: file
-  name: webhook
-  filename: webhook.log
-  
-panel_iframe:
-  ide:
-    title: cloud9
-    icon: mdi:code-braces
-    url: http://tiarkaerell.duckdns.org:8321/ide.html
-
-person:
-
-remote:
-- platform: harmony
-  name: Harmony Hub
-  host: 192.168.0.73
-    
-sensor:
-- platform: mqtt
-  name: Netatmo webhook trigger
-  state_topic: 'netatmo/update/terrasse'
-  expire_after: 20
-  value_template: '{{ value_json.push_type  }}'
-- platform: mqtt
-  name: Netatmo webhook
-  state_topic: 'netatmo/update/terrasse'
-  value_template: '{{ value_json.snapshot_id  }}'
-  json_attributes_topic: 'netatmo/update/terrasse'
-- platform: darksky
-  api_key: !secret darksky-api-key
-  hourly_forecast:
-  - 0
-  - 1
-  - 2
-  monitored_conditions:
-  - precip_probability
-  - precip_intensity
-- platform: template
-  sensors:
-    netatmo_type:
-      friendly_name: Netatmo webhook type
-      value_template: >-
-        {%- if is_state_attr("sensor.netatmo_webhook", "push_type", "NOC-animal") %}
-            Animal
-        {%- elif is_state_attr("sensor.netatmo_webhook", "push_type", "NOC-human") %}
-            Personne
-        {%- elif is_state_attr("sensor.netatmo_webhook", "push_type", "NOC-movement") %}
-            Movement
-        {%- elif is_state_attr("sensor.netatmo_webhook", "push_type", "NOC-vehicle") %}
-            Véhicule
-        {%- elif is_state_attr("sensor.netatmo_webhook", "push_type", "topology_changed") %}
-            Info
-        {%- elif is_state_attr("sensor.netatmo_webhook", "push_type", "NOC-light_mode") %}
-            Lumière
-        {% endif %}
-      icon_template: >-
-        {%- if is_state_attr("sensor.netatmo_webhook", "push_type", "NOC-animal") %}
-            mdi:dog-side
-        {%- elif is_state_attr("sensor.netatmo_webhook", "push_type", "NOC-human") %}
-            mdi:human
-        {%- elif is_state_attr("sensor.netatmo_webhook", "push_type", "NOC-movement") %}
-            mdi:weather-windy
-        {%- elif is_state_attr("sensor.netatmo_webhook", "push_type", "NOC-vehicle") %}
-            mdi:car-hatchback
-        {%- elif is_state_attr("sensor.netatmo_webhook", "push_type", "topology_changed") %}
-            mdi:information-variant
-        {%- elif is_state_attr("sensor.netatmo_webhook", "push_type", "NOC-light_mode") %}
-            mdi:lightbulb-on
-        {% endif %}
-    chauffage_bureau:
-      friendly_name: Chauffage
-      value_template: >
-        {% if states.light.qubino_goap_zmnhjd1_flush_dimmer_pilot_wire_level.state == "off" %}
-          Eteint
-        {% elif (state_attr('light.qubino_goap_zmnhjd1_flush_dimmer_pilot_wire_level','brightness') | float) >= 25 and
-          (state_attr('light.qubino_goap_zmnhjd1_flush_dimmer_pilot_wire_level','brightness') | float) <= 35 %}
-          Hors Gel
-        {% elif (state_attr('light.qubino_goap_zmnhjd1_flush_dimmer_pilot_wire_level','brightness') | float) >= 55 and
-          (state_attr('light.qubino_goap_zmnhjd1_flush_dimmer_pilot_wire_level','brightness') | float) <= 65 %}
-          Eco
-        {% elif (state_attr('light.qubino_goap_zmnhjd1_flush_dimmer_pilot_wire_level','brightness') | float) >= 95 %}
-          Confort
-        {% endif %}
-      icon_template: >
-        {% if states.light.qubino_goap_zmnhjd1_flush_dimmer_pilot_wire_level.state == "off" %}
-          mdi:radiator-off
-        {% elif (state_attr('light.qubino_goap_zmnhjd1_flush_dimmer_pilot_wire_level','brightness') | float) >= 25 and
-          (state_attr('light.qubino_goap_zmnhjd1_flush_dimmer_pilot_wire_level','brightness') | float) <= 35 %}
-          mdi:snowflake
-        {% elif (state_attr('light.qubino_goap_zmnhjd1_flush_dimmer_pilot_wire_level','brightness') | float) >= 55 and
-          (state_attr('light.qubino_goap_zmnhjd1_flush_dimmer_pilot_wire_level','brightness') | float) <= 65 %}
-          mdi:radiator-disabled
-        {% elif (state_attr('light.qubino_goap_zmnhjd1_flush_dimmer_pilot_wire_level','brightness') | float) >= 95 %}
-          mdi:radiator
-        {% endif %}
-    home:
-      friendly_name: Home presence
-      value_template: >
-        {% if is_state('device_tracker.virginia_presence', 'A la maison') and
-           is_state('device_tracker.vincent_presence', 'A la maison') %}
-          both
-        {% elif is_state('device_tracker.virginia_presence', 'A la maison') %}
-          Virginia
-        {% elif is_state('device_tracker.vincent_presence', 'A la maison') %}
-          Vincent
-        {% else %}
-          empty
-        {% endif %}
-
-shell_command:
-  clean_knowndevices: /bin/bash /config/clean_knowndevices.sh
-  gitupdate: /bin/bash /config/gitupdate.sh "automatic commit"
-  
-somfy:
-  client_id: !secret somfy-id
-  client_secret: !secret somfy-secret
-
-stream:
-
-sun:
-
-switch: !include switches.yaml
-          
-tahoma:
-  username: !secret email
-  password: !secret tahoma-password
-  
-tts:
-  - platform: google_translate
-
-weather:
-  - platform: darksky
-    api_key: !secret darksky-api-key
-    
-zwave:
-  usb_path: /dev/ttyACM0
-  polling_interval: 1800
-
-#device_tracker: !include device_tracker.yaml
-zone: !include zones.yaml
-group: !include groups.yaml
 automation: !include_dir_list automations/
-script: !include scripts.yaml
+binary_sensor: !include_dir_list binary_sensors
+camera: !include_dir_list cameras
+cloud:
+climate: !include_dir_list climates
+default_config:
+googlehome: !include includes/googlehome.yaml
+device_tracker: !include_dir_list device_trackers
+downloader: !include includes/dowloader.yaml
+group: !include includes/groups.yaml
+google: !include includes/google.yaml
+google_assistant: !include includes/google_assistant.yaml
+hacs: !include includes/hacs.yaml
+homeassistant: !include includes/homeassistant.yaml
+http: !include includes/http.yaml
+image_processing: !include_dir_list image_processings
+input_boolean: !include_dir_list input_booleans
+input_select: !include_dir_list input_selects
+life360: !include includes/life360.yaml
+logger: !include includes/logger.yaml
+lovelace: !include includes/lovelace.yaml
+map:
+media_player: !include_dir_list media_players
+mqtt: !include includes/mqtt.yaml
+netatmo: !include includes/netatmo.yaml
+notify: !include_dir_list notifies
+panel_iframe: !include_dir_list panel_iframes
+person:
+remote: !include_dir_list remotes
+script: !include includes/scripts.yaml
+sensor: !include_dir_list sensors
+shell_command: !include includes/shell_command.yaml
+somfy: !include includes/somfy.yaml
+stream:
+sun:
+switch: !include includes/switches.yaml
+tahoma: !include includes/tahoma.yaml
+tts: !include includes/tts.yaml
+weather: !include includes/weather.yaml
+zone: !include includes/zones.yaml
+zwave: !include includes/zwave.yaml
