--- a/automations/netatmo/UnregisteredWebhook.yaml
+++ b/automations/netatmo/UnregisteredWebhook.yaml
@@ -10,4 +10,4 @@ trigger:
 action:
   - service: notify.webhook
     data_template:
-      message: "{{ now() }} - {{ trigger.webhook_id }}: {{ trigger.json | tojson }}"
+      message: "UNREGISTERED - {{ now() }} - {{ trigger.webhook_id }}: {{ trigger.json | tojson }}"
