--- a/binary_sensors/Template.yaml
+++ b/binary_sensors/Template.yaml
@@ -1,2 +1,6 @@
 platform: template
-  sensors: !include_dir_list binary_sensors/binary_sensors_template
+  sensors:
+    netatmo_webhook_trigger:
+      device_class: motion
+      friendly_name: Netatmo webhook trigger
+      value_template: "{{ is_state('sensor.netatmo_webhook_trigger', 'NOC-human') }}"
