--- a/configuration.yaml
+++ b/configuration.yaml
@@ -1,6 +1,6 @@
 # Configure a default setup of Home Assistant (frontend, api, etc)
 automation: !include_dir_list automations/
-binary_sensor: !include_dir_list binary_sensors
+binary_sensor: !include_dir_list binary_sensors/
 camera: !include_dir_list cameras
 cloud:
 climate: !include_dir_list climates
