--- a/ui-lovelace.yaml
+++ b/ui-lovelace.yaml
@@ -53,7 +53,7 @@ views:
         cards:
         - type: entities
           entities:
-          - entity: sensor.netatmo_type 
+          - entity: sensor.netatmo_type_terrasse
             name: " "
         - type: picture-entity
           entity: camera.snap_terrasse
