splitting ui configuration file.

--- a/ui-lovelace.yaml
+++ b/ui-lovelace.yaml
@@ -185,165 +185,8 @@ views:
 # Onglet Salon       
 - title: Rez de Chaussée
   path: rez
-  cards:
-  - type: vertical-stack
-    cards:
-    - type: horizontal-stack
-      cards:
-      - type: custom:mini-graph-card
-        hours_to_show: 24
-        color_thresholds:
-        - value: 0
-          color: "#00FAFF"
-        - value: 5
-          color: "#00FFA1"
-        - value: 10
-          color: "#00FF3B"
-        - value: 15
-          color: "#26FF00"
-        - value: 20
-          color: "#8CFF00"
-        - value: 25
-          color: "#FFC300"
-        - value: 30
-          color: "#FF7B00"
-        - value: 35
-          color: "#FF1500"
-        entities:
-        - entity: sensor.netatmo_terrasse_temperature
-          name: "Terrasse"
-      - type: custom:mini-graph-card
-        hours_to_show: 24
-        color_thresholds:
-        - value: 0
-          color: "#00FAFF"
-        - value: 5
-          color: "#00FFA1"
-        - value: 10
-          color: "#00FF3B"
-        - value: 15
-          color: "#26FF00"
-        - value: 20
-          color: "#8CFF00"
-        - value: 25
-          color: "#FFC300"
-        - value: 30
-          color: "#FF7B00"
-        - value: 35
-          color: "#FF1500"
-        entities:
-        - entity: sensor.tdeg_salon
-          name: "Salon"
-      - type: custom:mini-graph-card
-        hours_to_show: 24
-        color_thresholds:
-        - value: 0
-          color: "#00FAFF"
-        - value: 5
-          color: "#00FFA1"
-        - value: 10
-          color: "#00FF3B"
-        - value: 15
-          color: "#26FF00"
-        - value: 20
-          color: "#8CFF00"
-        - value: 25
-          color: "#FFC300"
-        - value: 30
-          color: "#FF7B00"
-        - value: 35
-          color: "#FF1500"
-        entities:
-        - entity: sensor.sensative_strips_comfort_temperature_2
-          name: "Bureau"
-    - type: horizontal-stack
-      cards:
-      - type: gauge
-        name: "Humidité Salon"
-        entity: sensor.humidite_salon
-        min: 40
-        max: 70
-        severity:
-          green: 50
-          yellow: 60
-          red: 70
-      - type: gauge
-        name: "CO2 Salon"
-        entity: sensor.netatmo_salon_co2
-        min: 0
-        max: 2000
-        severity:
-          green: 0
-          yellow: 750
-          red: 1500
-  - type: custom:vertical-stack-in-card
-    title: Entrée
-    cards:
-    - type: light
-      entity: light.lux_entree
-      name: Entrée
-    - type: entities
-      entities:
-      - entity: cover.rolling_shutter_2
-        name: Volet Entrée
-  - type: custom:vertical-stack-in-card
-    title: Cuisine
-    cards:
-    - type: horizontal-stack
-      cards:
-      - type: light
-        entity: light.lux_cuisine_1
-        name: Cuisine 1
-      - type: light
-        entity: light.lux_cuisine_2
-        name: Cuisine 2
-    - type: entities
-      entities:
-      - entity: cover.rolling_shutter
-        name: Volet Cuisine
-  - type: custom:vertical-stack-in-card
-    title: Salon
-    cards:
-    - type: horizontal-stack
-      cards:
-      - type: light
-        entity: light.lampe_peau
-        name: Peau
-      - type: light
-        entity: light.lux_salon_1
-        name: Salon 1
-    - type: horizontal-stack
-      cards:
-      - type: light
-        entity: light.lux_salon_2
-        name: Salon 2
-      - type: light
-        entity: light.lux_salon_3
-        name: Salon 3
-    - type: entities
-      entities:
-      - entity: cover.rolling_shutter_3
-        name: Volet Porte Fenêtre
-  - type: entities
-    title: Bureau
-    show_header_toggle: false
-    entities:
-      - entity: cover.rolling_shutter_4
-        name: Volet
-      - entity: sensor.chauffage_bureau
-      - entity: input_select.qubino
-        name: " "
-  - type: custom:vertical-stack-in-card
-    title: Media
-    cards:
-    - type: horizontal-stack
-      cards:
-      - type: entity-button
-        entity: switch.ampli
-        name: "Spotify"
-      - type: entity-button
-        entity: switch.television
-        name: "Télé"
+  cards: !include_dir_list ui/rez
+
 
 #- type: custom:mini-graph-card
 #          name: Température Chambre Parents
