splitting ui configuration file.

--- a/ui-lovelace.yaml
+++ b/ui-lovelace.yaml
@@ -15,376 +15,19 @@ views:
 # Onglet principal
 - path: home
   title: Accueil
-#    badges:
-#      - device_tracker.vincent_presence
-#      - device_tracker.virginia_presence
-  cards:
-  - type: horizontal-stack
-    cards:
-    - type: glance
-      entities:
-      - entity: device_tracker.vincent_presence
-        icon: mdi:camera
-      - entity: device_tracker.virginia_presence
-        icon: mdi:pine-tree-box
-  - type: conditional
-    conditions:
-    - entity: sensor.home
-      state_not: both
-    card:
-      type: map
-      entities:
-      - device_tracker.vincent_presence
-      - device_tracker.virginia_presence
-  - type: vertical-stack
-    cards:
-    - type: picture-entity
-      entity: camera.camterrasse
-      camera_view: live
-      name: Terrasse live
-    - type: picture-entity
-      entity: camera.camsalon
-      camera_view: live
-      name: Salon live
-    - type: custom:vertical-stack-in-card
-      title: Snapshots
-      cards:
-      - type: entities
-        entities:
-        - entity: sensor.netatmo_type_terrasse
-          name: "Terrasse"
-        - entity: sensor.netatmo_type_salon
-          name: "Salon"
-      - type: horizontal-stack
-        cards:
-        - type: picture-entity
-          entity: camera.snap_terrasse
-          name: Terrasse
-        - type: picture-entity
-          entity: camera.snap_salon
-          name: Salon
-  - type: vertical-stack
-    cards:
-    - type: entity-button
-      entity: switch.terrasse
-    - type: custom:mini-graph-card
-      entities:
-      - entity: sensor.netatmo_terrasse_temperature
-        name: "Terrasse"
-      hours_to_show: 24
-      points_per_hour: 1
-      show:
-        points: hover
-        labels: true
-      color_thresholds:
-      - value: 0
-        color: "#00FAFF"
-      - value: 5
-        color: "#00FFA1"
-      - value: 10
-        color: "#00FF3B"
-      - value: 15
-        color: "#26FF00"
-      - value: 20
-        color: "#8CFF00"
-      - value: 25
-        color: "#FFC300"
-      - value: 30
-        color: "#FF7B00"
-      - value: 35
-        color: "#FF1500"
-    - type: custom:mini-graph-card
-      entities:
-      - entity: sensor.netatmo_pluie_jardin_rain
-        name: "Pluie"
-      hours_to_show: 24
-      points_per_hour: 1
-      show:
-        graph: bar
-        points: hover
-        labels: true
-      color_thresholds:
-      - value: 0
-        color: "#007FFF"
-      - value: 0.3
-        color: "#800080"
-      - value: 1
-        color: "#DC143C"
-    - type: custom:vertical-stack-in-card
-      title: Humidité Terrasse
-      cards:
-      - type: gauge
-        name: " "
-        entity: sensor.netatmo_terrasse_humidity
-        min: 30
-        max: 70
-        severity:
-          green: 30
-          yellow: 50
-          red: 70
-  - type: vertical-stack
-    cards:
-    - type: horizontal-stack
-      cards:
-      - type: gauge
-        entity: sensor.netatmo_pluie_jardin_rain
-        name: Précipitations
-        min: 0
-        max: 4
-#          - type: gauge
-#            entity: sensor.dark_sky_precip_probability_0h
-#            name: 0h
-      - type: gauge
-        entity: sensor.dark_sky_precip_probability_1h
-        name: 1h
-      - type: gauge
-        entity: sensor.dark_sky_precip_probability_2h
-        name: 2h
-    - type: custom:weather-card-chart
-      title: Météo
-      weather: weather.dark_sky
-      mode: hourly
-  - type: "custom:atomic-calendar"
-    title: "Calendrier"
-    maxDaysToShow: 14
-    showNoEventsForToday: true
-    fullDayEventText: "Toute la journée"
-    untilText: "Jusqu'au"
-    noEventsForNextDaysText: "Pas d'événements les prochains jours"
-    noEventsForTodayText: "Pas d'événement aujourd'hui"
-    showLocation: true
-    dateFormat: "dd Do MMM"
-    entities:
-    - entity: calendar.ti_ar_kaerell
-      color: red
-    - entity: calendar.vincent
-    - entity: calendar.virginia
-    - entity: calendar.tajum_s
-    - entity: calendar.naries
-#      - type: custom:home-feed-card
-#        title: Automatismes
-#        show_empty: false
-#        entities:
-#        - entity: automation.ferme_les_volets_de_velux_la_nuit
-#          content_template: '{{display_name}} a été activé'
-#        - entity: automation.ferme_les_velux_en_cas_de_pluie
-#          content_template: '{{display_name}} a été activé'
-#        - entity: automation.ouvre_le_velux_du_palier_s_il_fait_assez_frais_dehors
-#          content_template: '{{display_name}} a été activé'
-#        - entity: automation.ferme_tout_sur_le_palier_s_il_fait_trop_chaud_dehors
-#          content_template: '{{display_name}} a été activé'
-#        - entity: automation.ferme_le_velux_du_palier_s_il_fait_trop_froid_dehors
-#          content_template: '{{display_name}} a été activé'
-#        - entity: automation.ouvre_le_velux_de_lenaic_s_il_fait_assez_frais_dehors
-#          content_template: '{{display_name}} a été activé'
-#        - entity: automation.ferme_tout_chez_lenaic_s_il_fait_trop_chaud_dehors
-#          content_template: '{{display_name}} a été activé'
-#        - entity: automation.ferme_le_velux_de_lenaic_s_il_fait_trop_froid_dehors
-#          content_template: '{{display_name}} a été activé'
+  cards: !include_dir_list ui/accueil
 
-# Onglet Salon       
+# Onglet Salon
 - title: Rez de Chaussée
   path: rez
   cards: !include_dir_list ui/rez
 
-
-#- type: custom:mini-graph-card
-#          name: Température Chambre Parents
-#          entities: 
-#            - sensor.tdeg_parents
-#          align_icon: left
-#          color_thresholds:
-#            - value: 17
-#              color: "#0080ff"
-#            - value: 18
-#              color: "#00bfff"
-#            - value: 19
-#              color: "#00ffbf"
-#            - value: 20
-#              color: "#00ff40"
-#            - value: 21
-#              color: "#40ff00"
-#            - value: 23
-#              color: "#bfff00"
-#            - value: 26
-#              color: "#ffbf00"
-#            - value: 28
-#              color: "#ff4000"
-
 # Onglet Etage        
 - path: etage
   title: Etage
-  cards:
-    - type: vertical-stack
-      cards:
-      - type: custom:mini-graph-card
-        hours_to_show: 24
-        color_thresholds:
-        - value: 0
-          color: "#00FAFF"
-        - value: 5
-          color: "#00FFA1"
-        - value: 10
-          color: "#00FF3B"
-        - value: 15
-          color: "#26FF00"
-        - value: 20
-          color: "#8CFF00"
-        - value: 25
-          color: "#FFC300"
-        - value: 30
-          color: "#FF7B00"
-        - value: 35
-          color: "#FF1500"
-        entities:
-        - entity: sensor.netatmo_terrasse_temperature
-          name: "Terrasse"
-      - type: horizontal-stack
-        cards:
-        - type: custom:mini-graph-card
-          hours_to_show: 24
-          color_thresholds:
-          - value: 0
-            color: "#00FAFF"
-          - value: 5
-            color: "#00FFA1"
-          - value: 10
-            color: "#00FF3B"
-          - value: 15
-            color: "#26FF00"
-          - value: 20
-            color: "#8CFF00"
-          - value: 25
-            color: "#FFC300"
-          - value: 30
-            color: "#FF7B00"
-          - value: 35
-            color: "#FF1500"
-          entities:
-          - entity: sensor.sensative_strips_comfort_temperature
-            name: "Lenaïc"
-        - type: custom:mini-graph-card
-          hours_to_show: 24
-          color_thresholds:
-          - value: 0
-            color: "#00FAFF"
-          - value: 5
-            color: "#00FFA1"
-          - value: 10
-            color: "#00FF3B"
-          - value: 15
-            color: "#26FF00"
-          - value: 20
-            color: "#8CFF00"
-          - value: 25
-            color: "#FFC300"
-          - value: 30
-            color: "#FF7B00"
-          - value: 35
-            color: "#FF1500"
-          entities:
-          - entity: sensor.netatmo_palier_temperature
-            name: "Palier"
-        - type: custom:mini-graph-card
-          hours_to_show: 24
-          color_thresholds:
-          - value: 0
-            color: "#00FAFF"
-          - value: 5
-            color: "#00FFA1"
-          - value: 10
-            color: "#00FF3B"
-          - value: 15
-            color: "#26FF00"
-          - value: 20
-            color: "#8CFF00"
-          - value: 25
-            color: "#FFC300"
-          - value: 30
-            color: "#FF7B00"
-          - value: 35
-            color: "#FF1500"
-          entities:
-          - entity: sensor.tdeg_parents
-            name: "Parents"
-    - type: vertical-stack
-      cards:
-      - type: custom:vertical-stack-in-card
-        title: Palier
-        cards:
-        - type: horizontal-stack
-          cards:
-          - type: entity-button
-            name: Velux
-            entity: switch.toggle_velux_palier
-          - type: entity-button
-            name: Volet
-            entity: switch.toggle_volet_palier
-          - type: entity-button
-            name: Les deux
-            entity: switch.toggle_both_palier
-      - type: custom:vertical-stack-in-card
-        title: Chambre de Lenaïc
-        cards:
-        - type: horizontal-stack
-          cards:
-          - type: entity-button
-            name: Velux
-            entity: switch.toggle_velux_lenaic
-          - type: entity-button
-            name: Volet
-            entity: switch.toggle_volet_lenaic
-          - type: entity-button
-            name: Les deux
-            entity: switch.toggle_both_lenaic
-      - type: custom:vertical-stack-in-card
-        title: Chambre Parentale
-        cards:
-        - type: horizontal-stack
-          cards:
-          - type: light
-            entity: light.lux_parents_1
-            name: Lux 1
-          - type: light
-            entity: light.lux_parents_2
-            name: Lux 2
+  cards: !include_dir_list ui/etage
 
 # Onglet configuration
 - path: conf
   title: Configuration
-  cards:
-    - type: glance
-      entities:
-        - group.vincent
-        - group.virginia
-    - type: custom:vertical-stack-in-card
-      title: Automatismes (on/off)
-      cards:
-        - type: entities
-          title: Velux Palier
-          show_header_toggle: false
-          entities:
-          - entity: automation.ouvre_le_velux_du_palier_s_il_fait_assez_frais_dehors
-            name: Ouvre le vélux s'il fait plus frais dehors
-          - entity: automation.ferme_le_velux_du_palier_en_cas_de_pluie
-            name: Ferme le vélux s'il pleut.
-          - entity: automation.ferme_le_velux_du_palier_la_nuit
-            name: Ferme le volet la nuit.
-          - entity: automation.ferme_tout_sur_le_palier_s_il_fait_trop_chaud_dehors
-            name: Ferme tout s'il fait trop chaud dehors
-          - entity: automation.ferme_le_velux_du_palier_s_il_fait_trop_froid_dehors
-            name: Ferme le vélux s'il fait trop froid dehors
-        - type: entities
-          title: Velux de Lenaïc
-          show_header_toggle: false
-          entities:
-          - entity: automation.ouvre_le_velux_de_lenaic_s_il_fait_assez_frais_dehors
-            name: Ouvre le vélux s'il fait plus frais dehors
-          - entity: automation.ferme_le_velux_de_lenaic_en_cas_de_pluie
-            name: Ferme le vélux s'il pleut.
-          - entity: automation.ferme_le_velux_de_lenaic_la_nuit
-            name: Ferme le volet la nuit.
-          - entity: automation.ferme_tout_chez_lenaic_s_il_fait_trop_chaud_dehors
-            name: Ferme tout s'il fait trop chaud dehors
-          - entity: automation.ferme_le_velux_de_lenaic_s_il_fait_trop_froid_dehors
-            name: Ferme le vélux s'il fait trop froid dehors
+  cards: !include_dir_list ui/conf
