--- a/ui/snapshots/7_terrasse_latest_face.yaml
+++ b/ui/snapshots/7_terrasse_latest_face.yaml
@@ -1,4 +1,4 @@
 type: picture-glance
-title: Personne
+title: Dernier Visage Terrasse
 entities: []
 image: local/deepstack/Terrasse/deepstack_latest_face.jpg
