--- a/ui/snapshots/1_terrasse_vehicule.yaml
+++ b/ui/snapshots/1_terrasse_vehicule.yaml
@@ -1,4 +1,4 @@
 type: picture-glance
 title: Vehicule
 entities: []
-image: /local/camera/CamTerrasse_vehicle_latest.jpg
+image: /local/camera/CamTerrasse_vehicle_latest.jpg?v=1
