--- a/ui/snapshots/2_terrasse_human.yaml
+++ b/ui/snapshots/2_terrasse_human.yaml
@@ -1,4 +1,4 @@
 type: picture-glance
 title: Personne
 entities: []
-image: /local/camera/CamTerrasse_human_latest.jpg
+image: /local/camera/CamTerrasse_human_latest.jpg?v=1
