--- a/ui/snapshots/3_terrasse_mouvement.yaml
+++ b/ui/snapshots/3_terrasse_mouvement.yaml
@@ -1,4 +1,4 @@
 type: picture-glance
 title: Mouvement
 entities: []
-image: /local/camera/CamTerrasse_movement_latest.jpg
+image: /local/camera/CamTerrasse_movement_latest.jpg?v=1
