--- a/ui/snapshots/4_salon_human.yaml
+++ b/ui/snapshots/4_salon_human.yaml
@@ -1,4 +1,4 @@
 type: picture-glance
 title: Personne
 entities: []
-image: /local/camera/CamSalon_person_latest.jpg
+image: /local/camera/CamSalon_person_latest.jpg?v=1
