--- a/ui/snapshots/5_salon_mouvement.yaml
+++ b/ui/snapshots/5_salon_mouvement.yaml
@@ -1,4 +1,4 @@
 type: picture-glance
 title: Mouvement
 entities: []
-image: local/camera/CamSalon_movement_latest.jpg
+image: local/camera/CamSalon_movement_latest.jpg?v=1
