--- a/ui/snapshots/7_terrasse_latest_face.yaml
+++ b/ui/snapshots/7_terrasse_latest_face.yaml
@@ -1,4 +1,4 @@
 type: picture-glance
 title: Dernier Visage Terrasse
 entities: []
-image: local/deepstack/Terrasse/deepstack_latest_face.jpg
+image: local/deepstack/Terrasse/deepstack_latest_face.jpg?v=1
