--- a/ui/snapshots/1_terrasse_vehicule.yaml
+++ b/ui/snapshots/1_terrasse_vehicule.yaml
@@ -1,4 +1,3 @@
-type: picture-glance
-title: Vehicule
-entities: []
-image: /local/camera/CamTerrasse_vehicle_latest.jpg?v=1
+type: picture-entity
+entity: camera.terrasse_vehicule
+name: Véhicule
