--- a/ui/snapshots/2_terrasse_human.yaml
+++ b/ui/snapshots/2_terrasse_human.yaml
@@ -1,4 +1,3 @@
-type: picture-glance
-title: Personne
-entities: []
-image: /local/camera/CamTerrasse_human_latest.jpg?v=1
+type: picture-entity
+entity: camera.terrasse_humain
+name: Personne
