--- a/ui/snapshots/3_terrasse_mouvement.yaml
+++ b/ui/snapshots/3_terrasse_mouvement.yaml
@@ -1,4 +1,3 @@
-type: picture-glance
-title: Mouvement
-entities: []
-image: /local/camera/CamTerrasse_movement_latest.jpg?v=1
+type: picture-entity
+entity: camera.terrasse_mouvement
+name: Mouvement
