--- a/ui/snapshots/4_salon_person.yaml
+++ b/ui/snapshots/4_salon_person.yaml
@@ -1,4 +1,3 @@
-type: picture-glance
-title: Personne
-entities: []
-image: /local/camera/CamSalon_person_latest.jpg?v=1
+type: picture-entity
+entity: camera.salon_personne
+name: Personne
