--- a/ui/snapshots/6_salon_latest_face.yaml
+++ b/ui/snapshots/6_salon_latest_face.yaml
@@ -1,4 +1,3 @@
-type: picture-glance
-title: Dernier Visage Salon
-entities: []
-image: local/deepstack/Salon/deepstack_latest_face.jpg?v=1
+type: picture-entity
+entity: camera.deepstack_face_terrasse
+name: Deepstack Face Terrasse
