--- a/ui/snapshots/7_terrasse_latest_face.yaml
+++ b/ui/snapshots/7_terrasse_latest_face.yaml
@@ -1,4 +1,3 @@
-type: picture-glance
-title: Dernier Visage Terrasse
-entities: []
-image: local/deepstack/Terrasse/deepstack_latest_face.jpg?v=1
+type: picture-entity
+entity: camera.deepstack_face_salon
+name: Deepstack Face Salon
