--- a/cameras/terrasse_latest_face.yaml
+++ b/cameras/terrasse_latest_face.yaml
@@ -1,3 +1,3 @@
 platform: local_file
-name: Terrasse Vehicule
+name: Deepstack Face Terrasse
 file_path: /config/www/deepstack/Terrasse/deepstack_latest_face.jpg
